# h5glance

./: .gitignore  .travis.yml  CHANGES.rst  Demo.ipynb  LICENSE  README.rst  pyproject.toml
.github/workflows/: tests.yml
h5glance/: __init__.py  __main__.py  cli.py  completer.py  completion.bash  completion.zsh  copypath.js  datatypes.py  generate.py  html.py  html_cli.py  ipython.py  terminal.py  treeview.css  utils.py
tests/: conftest.py  test_datatypes.py  test_generate.py  test_html_cli.py  test_terminal.py
