[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "h5glance"
author = "Thomas Kluyver"
author-email = "thomas@kluyver.me.uk"
home-page = "https://github.com/takluyver/h5glance"
description-file = "README.rst"
requires = [
    "h5py",
    "htmlgen",
]
requires-python = ">=3.5"
classifiers = ["License :: OSI Approved :: BSD License"]

[tool.flit.scripts]
h5glance = "h5glance.terminal:main"
h5glance-html = "h5glance.html_cli:main"
