[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "h5glance"
author = "European XFEL GmbH"
author-email = "cas-support@xfel.eu"
maintainer = "Thomas Kluyver"
home-page = "https://github.com/European-XFEL/h5glance"
description-file = "README.rst"
requires = [
    "h5py >=2.10",
    "htmlgen",
]
requires-python = ">=3.5"
classifiers = ["License :: OSI Approved :: BSD License"]

[tool.flit.scripts]
h5glance = "h5glance.terminal:main"
h5glance-html = "h5glance.html_cli:main"
